Finished + Endless Scrolling + Likes

--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -10,7 +10,7 @@
         android:id="@+id/tvDetailUsername"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="5dp"
         android:text="TextView"
         android:textSize="40sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -23,6 +23,7 @@
         android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="20dp"
+        android:maxHeight="200dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvDetailUsername"
@@ -33,12 +34,12 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         android:layout_marginEnd="20dp"
         android:text="TextView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ivDetailImage" />
+        app:layout_constraintTop_toBottomOf="@+id/tvDetailLikes" />
 
     <TextView
         android:id="@+id/tvDetailTimestamp"
@@ -48,4 +49,24 @@
         android:text="TextView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/tvDetailUsername" />
+
+    <ImageView
+        android:id="@+id/ivDetailLike"
+        android:layout_width="44dp"
+        android:layout_height="39dp"
+        android:layout_marginTop="10dp"
+        app:layout_constraintEnd_toEndOf="@+id/ivDetailImage"
+        app:layout_constraintStart_toStartOf="@+id/ivDetailImage"
+        app:layout_constraintTop_toBottomOf="@+id/ivDetailImage"
+        app:srcCompat="@drawable/ufi_heart" />
+
+    <TextView
+        android:id="@+id/tvDetailLikes"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:text="TextView"
+        app:layout_constraintEnd_toEndOf="@+id/ivDetailLike"
+        app:layout_constraintStart_toStartOf="@+id/ivDetailLike"
+        app:layout_constraintTop_toBottomOf="@+id/ivDetailLike" />
 </androidx.constraintlayout.widget.ConstraintLayout>
